<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_filter">Filter</string>
    <string name="fdate">By Date</string>
    <string name="fstatus">By Status</string>
    <string name="fcatagory">By Category</string>
    <string name="litemname">Lost Item Name</string>
    <string name="fitemname">Found Item Name</string>
    <string name="app_name">Lost and Found</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="title_activity_login_status">LoginStatus</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="founder">I Found Something</string>
    <string name="loser">I Lost Something</string>
    <string name="lostinfo">Lost Item Info</string>
    <string name="foundinfo">Found Item Info</string>
    <string name="filter">Display Items</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_lost_item_input">LostItemInput</string>
    <string name="lostItemInfo">Lost Item Info</string>
    <string name="foundItemInfo">Found Item Info</string>
    <string name="itemName">Item Name</string>
    <string name="location">Location</string>
    <string name="discription">Description</string>
    <string name="realname">Real Name</string>
    <string name="phone">Phone Number</string>
    <string name="lostDate">Date of Losing</string>
    <string name="emailhint">user@domain.com</string>
    <string name="title_activity_lost_item">LostItem</string>
    <string name="title_activity_lost_item_info">LostItemInfo</string>
    <string name="loginasadmin">Login As Admin</string>
    <string name="title_activity_login_admin">LoginAdmin</string>
    <string name="createadmin">Create an Admin</string>
    <string name="administrate">Administrate User</string>
    <string name="title_activity_user_list">UserList</string>
    <string name="title_activity_administrate_user">AdministrateUser</string>
    <string name="deleteuser">Delete this User</string>
    <string name="unlockuser">Unlock this User</string>
    <string name="title_activity_create_admin">CreateAdmin</string>
    <string name="catagory">Catagory</string>
    <string name="title_activity_found_item_input">FoundItemInput</string>
    <string name="title_activity_found_item">FoundItem</string>
    <string name="title_activity_found_item_info">FoundItemInfo</string>
    <string name="foundDate">Date of Found</string>
    <string name="title_activity_display_item">DisplayItem</string>
    <string name="byName">By Name</string>
    <string name="potMatch">Potential Matching</string>
    <string name="title_activity_match_list">MatchList</string>
    <string name="title_activity_match_info">MatchInfo</string>

</resources>